[gd_scene load_steps=3 format=3 uid="uid://combatscreen"]

[ext_resource type="Script" path="res://scripts/screens/combat_screen.gd" id="1_combat"]
[ext_resource type="Script" path="res://scripts/ui/card_hand.gd" id="2_cardhand"]

[node name="CombatScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_combat")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 0

[node name="EnemyArea" type="PanelContainer" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 180)
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.3

[node name="EnemyContainer" type="HBoxContainer" parent="VBoxContainer/EnemyArea"]
layout_mode = 2
alignment = 1
theme_override_constants/separation = 20

[node name="BattlefieldArea" type="PanelContainer" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 160)
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.25

[node name="CreatureContainer" type="HBoxContainer" parent="VBoxContainer/BattlefieldArea"]
layout_mode = 2
alignment = 1
theme_override_constants/separation = 20

[node name="InfoBar" type="HBoxContainer" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
theme_override_constants/separation = 20

[node name="HPLabel" type="Label" parent="VBoxContainer/InfoBar"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 18
text = "HP: 50/50"
vertical_alignment = 1

[node name="EnergyLabel" type="Label" parent="VBoxContainer/InfoBar"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0.3, 0.7, 1, 1)
theme_override_font_sizes/font_size = 18
text = "Energy: 3/3"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TurnIndicator" type="Label" parent="VBoxContainer/InfoBar"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0.3, 0.9, 0.3, 1)
theme_override_font_sizes/font_size = 16
text = "Your Turn"
horizontal_alignment = 1
vertical_alignment = 1

[node name="FoodLabel" type="Label" parent="VBoxContainer/InfoBar"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(1, 0.8, 0.3, 1)
theme_override_font_sizes/font_size = 18
text = "FT: 0"
horizontal_alignment = 2
vertical_alignment = 1

[node name="EndTurnButton" type="Button" parent="VBoxContainer/InfoBar"]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "End Turn"

[node name="HandArea" type="PanelContainer" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 220)
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.35

[node name="CardHand" type="Control" parent="VBoxContainer/HandArea"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("2_cardhand")

[node name="TargetingOverlay" type="ColorRect" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0, 0, 0, 0.3)

[node name="TargetingHint" type="Label" parent="TargetingOverlay"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -100.0
offset_top = 20.0
offset_right = 100.0
offset_bottom = 50.0
grow_horizontal = 2
theme_override_colors/font_color = Color(1, 1, 0.5, 1)
theme_override_font_sizes/font_size = 20
text = "Select a target"
horizontal_alignment = 1
